# cpcraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  fastload.ld  prizm.ld
.github/: dependabot.yml
.github/workflows/: c-cpp.yml
REFS/CP-Raycaster-Demo-master/: Makefile  README.md
REFS/CP-Raycaster-Demo-master/.devcontainer/: Dockerfile
REFS/CP-Raycaster-Demo-master/.github/workflows/: c-cpp.yml  codeql.yml
REFS/CP-Raycaster-Demo-master/src/: main.cpp
REFS/CPDoom-master/: .gitignore  Makefile  README.md
REFS/CPDoom-master/.devcontainer/: Dockerfile  devcontainer.json
REFS/CPDoom-master/.github/workflows/: c-cpp.yml
REFS/CPDoom-master/src/: main.cpp
REFS/CPDoom-master/src/cas/: bootstrap.cpp
REFS/CPDoom-master/src/doom/: d_main.c  (+17 more)
REFS/HHK3template-main/: Makefile
REFS/HHK3template-main/.devcontainer/: Dockerfile
REFS/HHK3template-main/.github/: dependabot.yml
assets/tex_Default/: icon  icons  info  textures
assets/tex_FestivePack/: icon  icons  info  textures
doc/: controls.txt  new features.txt  recipes.txt  settings.txt
doc/world used in screenshots/world3/: chestData  chunk0  chunk1  chunk10  chunk11  chunk12  chunk13  chunk14  chunk15  chunk16  chunk17  chunk18  chunk19  chunk2  chunk20  chunk21  chunk22  chunk23  chunk24  chunk25  chunk26  chunk27  chunk28  chunk29  chunk3  chunk30  chunk31  chunk32  chunk33  chunk34  chunk35  chunk36  chunk37  chunk38  chunk39  chunk4  chunk40  chunk41  chunk42  chunk43  (+28 more)
doc/world used in screenshots/world5/: chunk14  chunk16  chunk18  chunk27  chunk35  playerData  worldData
include/: fxcg_syscalls.h  stdint.h
include/fxcg/: keyboard.h
src/: DMA_Transfer.c  DMA_Transfer.h  casiowin.h  compression.c  compression.h  config.h.in  controls.c  controls.h  eninge.c  fastBdisp.c  fastBdisp.h  fxlibc_hal.c  lz4.c  lz4.h  main.cpp  tlsf.c
(+5 files in other folders)
